2012-11-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/ocdrev.xsl: Extract OCD_REVISION out of Atmel Studio
	6.x XML device files

2012-11-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/pdml.xsl: New XSLT stylesheet to analyze Wireshark
	USB traces exported as PDML data

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-release 2.13

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for release 2.13

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Martin Cerveny (patch #3495107):
	Add IO register info for a large number of mega and tiny AVRs
	* src/devdescr.cc: add pointers to IO register definitions
	* src/ioreg.h: add declarations for the IO register definitions,
	extend "reg_addr" to "unsigned int" to accomodate space for the
	IO registers in newer AVRs
	* src/ioreg.cc: add new IO register definitions

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Chris Thunes (patch #3497114):
	* src/jtag2prog.cc (jtag2::eraseProgramMemory): Use
	CMND_XMEGA_ERASE to erase Xmega program memory
	* src/jtag_defs.h: add CMND_XMEGA_ERASE
	* src/jtag.h: (Dito)

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Chris Thunes (patch #3497114):
	* src/jtag2rw.cc (jtag2::memorySpace): Return the correct
	memory type for Xmega write operations.

2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Mihai Hagianu (patch #3496094): add ATxmega128A3
	Contributed by Chris Thunes (patch #3497114): add ATxmega32A4
	* src/devdescr.cc (ATxmega32A4, ATxmega128A3): new entries
	* doc/avarice.1: Document new devices.

2012-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: In AC_LINK_IFELSE, use AC_LANG_SOURCE for the
	source code to be compiled, in order to silence a warning.
	Bump version to svn20121102.

2012-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Deprecate target ELF file programming (downloading).